--- a/src/components/PostPage/PostPage.css
+++ b/src/components/PostPage/PostPage.css
@@ -26,19 +26,19 @@
   
   .user-details {
     margin-left: 12px;
-    
+  
   }
   
   .profile-name {
  
-    font-size: 20px;
-    /* width: 40px;
-    height: 40px; */
+    font-size: 15px;
+    width: 40px;
+    height: 40px;
     margin-bottom: 85%;
     
     position: relative;
-    left: 150px;
-    justify-content: center;
+    left: 110px;
+    text-align: center;
   
   
   }
